--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
