--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.509.0",
+    "marked": "^15.0.11",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
+    "openai": "^4.98.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
